# wenruji

./: Cargo.toml  README.md  RELEASES.md  rustfmt.toml
.cargo/: config.toml
artifacts/: checksums.txt  crack_the_vault.wasm  hitnrug.wasm  referral.wasm
contracts/crack-the-vault/: Cargo.toml  README.md
contracts/crack-the-vault/src/: config.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/crack-the-vault/src/testing/: fin.rs  mod.rs  referral.rs  test_cases.rs  test_helpers.rs  test_macros.rs
contracts/hitnrug/: Cargo.toml
contracts/hitnrug/src/: config.rs  contract.rs  error.rs  game.rs  lib.rs  msg.rs  state.rs
contracts/hitnrug/src/testing/: test_cases.rs  test_helpers.rs  test_macros.rs
contracts/referral/: Cargo.toml
contracts/referral/src/: contract.rs  error.rs  lib.rs  msg.rs
contracts/referral/src/state/: config.rs  mod.rs  referral.rs
contracts/referral/src/testing/: test_cases.rs  test_helpers.rs  test_macros.rs
script/: optimize.sh
