[workspace]
resolver = "2"
members = ["packages/*", "contracts/*"]
authors = ["wenruji.fun <wenruji.fun@gmail.com>"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false

[workspace.dependencies]
cosmwasm-schema = "2.1.0"
cosmwasm-std = { version = "2.1.0", features = ["cosmwasm_1_4"] }
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
cw2 = "2.0.0"
thiserror = { version = "1.0.58" }
cw-multi-test = "2.0.1"
anyhow = "1"
wenruji-rs = { path = "./packages/wenruji-rs" }
referral = { path = "./contracts/referral" }